# ot-harjoitustyo

./: .coverage  .coveragerc  .gitignore  .pylintrc  pyproject.toml  readme.md  tasks.py  to-do.txt
data/: data.db  test.db
data/CSV/: .~lock.ADA.csv#  ADA.csv  BCH.csv  BTC.csv  DOGE.csv  Dash.csv  EOS.csv  ETC.csv  ETH.csv  LTC.csv  MIOTA.csv  NEO.csv  TRX.csv  USDT.csv  VEN.csv  XEM.csv  XLM.csv  XMR.csv  XRP.csv  XTC.csv
data/database/: data.db  test.db
dokumentaatio/: arkkitehtuuri.md  arkkitehtuurikuvaus.md  kaytto-ohje.md  kayttohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
dokumentaatio/luokkakaavio/: luokkakaavio.txt
dokumentaatio/sekvenssikaavio/: new_portfolio.txt
dokumentaatio/sekvenssikaavio_work_in_progress/: signup.txt
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/: pyproject.toml
laskarit/viikko2/maksukortti/: .coverage  tasks.py
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/: tasks.py
laskarit/viikko2/unicafe/src/: kassapaate.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: Luokkakaavio.txt  Sekvenssiokaavio3.txt  Sekvenssiokaavio4.txt
src/: .env  .env.test  config.py  database_connection.py  initiate_db.py  main.py  main_gui.py  pyproject.toml  pytest.ini  schema.sql  tasks.py
src/database/: store.py
src/entities/: content.py  portfolio.py  reference_portfolio.py  user.py
src/repositories/: content_repository.py  crypto_repository.py  portfolio_repository.py  portfolios.py  price_repository.py  read.py  users.py  (+4 more)
(+23 files in other folders)
