[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Rami Piik <rami.piik@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Werkzeug = "^2.0.2"
invoke = "^1.6.0"

[tool.poetry.dev-dependencies]
black = "^21.11b1"
pytest = "^6.2.5"
coverage = "^6.1.2"
autopep8 = "^1.6.0"
pylint = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
