[tool.poetry]
name = "viikko2"
version = "0.1.0"
description = ""
authors = ["Rami Piik <rami.piik@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
coverage = "^6.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
